# Agentic-Context-Engineering

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  check_results.py  dev_set.json  holdout_set.json  iteration_set.json  iteration_set_large.json  larger_set.json  mkdocs.yml  pyproject.toml  simple_test.py  test_ace_system.py  verify_setup.py
.github/workflows/: ci.yml
agentic_context_engineering/: __init__.py  cli.py  cli_fixed.py
agentic_context_engineering/agents/: __init__.py  curator.py  generator.py  reflector.py
agentic_context_engineering/configs/: __init__.py  default.yaml
agentic_context_engineering/eval/: __init__.py  dataset_generator.py  educational_rubric.py  evaluator.py
agentic_context_engineering/playbook_schema/: __init__.py  base_playbook.yaml  schema.py
agentic_context_engineering/runners/: __init__.py  ace_runner.py  orchestrator.py
agentic_context_engineering/utils/: __init__.py  config.py  conversation_logger.py  llm_client.py  metrics.py  versioning.py
docs/: PRD.md  index.md  integration_guide.md  modules.md  project2_integration_checklist.md
examples/external_rag_integration/: README.md  conversation_logger.py  requirements.txt  sample_conversations.json  simple_rag_bot.py  trigger_ace.py
test_outputs/: ace_results_20251105_144307.json  ace_results_20251105_144929.json  ace_results_20251106_111700.json  dev_set.json  holdout_set.json  iteration_set.json  metrics_history_20251105_144929.json
tests/: test_external_integration.py  test_foo.py  test_integration.py  test_llm_client.py  test_playbook.py
