[project]
name = "Agentic-Context-Engineering"
version = "0.0.1"
description = "Agentic Context Engineering (ACE) — Evolving Contexts for Self-Improving Language Models"
authors = [{ name = "Egemen Çankaya", email = "egemencankaya14@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "sacrebleu>=2.0.0",
    "rouge-score>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://EgeCankaya.github.io/Agentic-Context-Engineering/"
Repository = "https://github.com/EgeCankaya/Agentic-Context-Engineering"
Documentation = "https://EgeCankaya.github.io/Agentic-Context-Engineering/"

[project.optional-dependencies]
# CLI examples
examples = [
    "typer>=0.12.0",
]
# Notebooks, plotting and exploration
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "ty>=0.0.1a16",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_context_engineering"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Temporary relaxations to unblock CI; we can tighten later
    # pyupgrade family and typing modernizations
    "UP006", "UP035", "UP045",
    # tryceratops strictness
    "TRY003", "TRY300", "TRY400",
    # subprocess/path hardening (Bandit-like)
    "S603", "S607",
    # misc
    "B007", "RUF013", "PGH003", "E712",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E712"]
"simple_test.py" = ["S101", "TRY300", "F841"]
"test_ace_system.py" = ["S101", "TRY300", "F841"]
"examples/external_rag_integration/*.py" = ["PGH003", "UP045", "UP035", "UP006"]
"verify_setup.py" = ["TRY300"]
"agentic_context_engineering/cli_fixed.py" = ["B904", "F841", "A002", "F811"]
"agentic_context_engineering/eval/dataset_generator.py" = ["S311"]
"agentic_context_engineering/eval/evaluator.py" = ["SIM102"]
"agentic_context_engineering/runners/ace_runner.py" = ["S110", "SIM105"]
"agentic_context_engineering/runners/orchestrator.py" = ["F841"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["agentic_context_engineering"]

[tool.deptry]
# Optional extras for docs/notebooks are intentionally unused by the library code
[tool.deptry.per_rule_ignores]
DEP002 = ["jupyter", "matplotlib"]
